# solarspatialtools

./: .gitignore  .readthedocs.yml  Changelog.md  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: deploy_test.yml  draft-pdf.yml  tests.yml
demos/: automate_cmv_demo.ipynb  automate_cmv_demo.py  cmv_demo.ipynb  cmv_demo.py  field_demo.ipynb  field_demo.py  field_demo_detailed.ipynb  field_demo_full_process.py  field_demo_full_process_multithread.py  field_details.ipynb  field_reassignment_demo.ipynb  field_reassignment_demo.py  plant_digitization_example.ipynb  signalproc_demo.py  simple_cmv_demo.py  synthetic_clouds_demo.ipynb  synthetic_clouds_demo.py  synthetic_internal.py  synthetic_internal_demo.py
demos/data/: digitized_plant_centroids.csv  hope_melpitz_1s.h5  sample_field.h5  sample_plant_1.h5
docs/sphinx/source/: api.rst  cmv.rst  conf.py  examples.rst  field.rst  index.rst  othermods.rst  solartoolbox.rst  synthirrad.rst
docs/sphinx/source/demos/: automate_cmv_demo.ipynb  automate_cmv_demo.nblink  cmv_demo.ipynb  cmv_demo.nblink  field_demo.ipynb  field_demo.nblink  field_demo.py  field_demo_detailed.ipynb  field_demo_detailed.nblink  field_demo_full_process.py  field_demo_full_process_multithread.py  field_reassignment_demo.ipynb  field_reassignment_demo.nblink  field_reassignment_demo.py  plant_digitization_example.ipynb  plant_digitization_example.nblink  signalproc_demo.py  (+1 more)
joss2024/: paper.bib  paper.md
src/solarspatialtools/: __init__.py  cloudfield.py  cmv.py  field.py  irradiance.py  signalproc.py  spatial.py  stats.py
src/solarspatialtools/dataio/: hope_campaign.py  nrcan_data.py
src/solarspatialtools/synthirrad/: cloudfield.py  copula.py
src/solarspatialtools/visualization/: __init__.py  vis_tools.py
src/solartoolbox/: __init__.py  cmv.py  field.py  signalproc.py  spatial.py  stats.py
src/solartoolbox/dataio/: hope_campaign.py  iotools.py  nrcan_data.py
tests/: test_cmv.py  test_field.py  test_irradiance.py  test_signalproc.py  test_spatial.py  test_stats.py
tests/synthirrad/: test_cloudfield.py  test_copula.py
(+3 files in other folders)
