[metadata]
name = solarspatialtools
version = 0.5.0
author = 'Joe Ranalli'
author_email = jar339@psu.edu
description = A package for spatial analysis of solar energy and solar irradiance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jranalli/solarspatialtools
project_urls =
    Bug Tracker = https://github.com/jranalli/solarspatialtools/issues
    Documentation = https://solarspatialtools.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research

[options]
install_requires =
    numpy
    pandas
    tables
    pyproj
    pvlib
    netcdf4
    scipy
    matplotlib

[options.extras_require]
tests =
    pytest

demos =
    jupyter

docs =
    sphinx==7.4.7
    sphinx_rtd_theme==2.0.0
    nbsphinx==0.9.5
    ipython==8.27.0
    nbsphinx-link==1.3.0